Bug 1332343 - Fix browser_largeAllocation.js in multi-e10s, r=smaug

MozReview-Commit-ID: EdNYf1saOI0